[package]
name = "app_extension_viewer"
version = "0.1.0"
edition = "2021"
description = "A Rust application to view which file extensions macOS applications can open"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System operations
walkdir = "2.4"

# Terminal output formatting
colored = "2.0"
