[package]
name = "dutis"
version = "0.1.0"
edition = "2021"
description = "A comprehensive macOS application file extension viewer and default app setter written in Rust"
authors = ["Tsong Lew <tsonglew@gmail.com>"]
license = "MIT"
repository = "https://github.com/tsonglew/dutis"
keywords = ["macos", "file-extensions", "applications", "uti", "default-apps"]
categories = ["command-line-utilities", "system"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System operations
walkdir = "2.4"

# Terminal output formatting
colored = "2.0"
